unpackaged/objects/EmployeeTraining__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Employee&apos;s Trainings</relationshipLabel>
        <relationshipName>Employee_s_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee&apos;s Trainings</relationshipLabel>
        <relationshipName>EmployeeTrainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Employee&apos;s Trainings</relationshipLabel>
        <relationshipName>Employee_s_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Employee&apos;s Trainings</relationshipLabel>
        <relationshipName>EmployeesTrainings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Employee&apos;s Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ED-{00000000}</displayFormat>
        <label>Employee&apos;s Training ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee&apos;s Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>